specified packageManager in package.json

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "keywords": [],
   "author": "",
+  "packageManager": "pnpm",
   "license": "ISC",
   "dependencies": {
     "@fastify/cookie": "^9.3.1",
