--- a/package.json
+++ b/package.json
@@ -10,12 +10,13 @@
   },
   "keywords": [],
   "author": "",
-  "packageManager": "pnpm",
+  "packageManager": "pnpm@8.15.3",
   "license": "ISC",
   "dependencies": {
     "@fastify/cookie": "^9.3.1",
     "@fastify/jwt": "^8.0.0",
     "bcrypt": "^5.1.1",
+    "dotenv": "^16.4.5",
     "fastify": "^4.26.1",
     "fastify-zod": "^1.4.0",
     "pino-pretty": "^10.3.1",
