--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "dotenv": "^16.4.5",
     "fastify": "^4.26.1",
     "fastify-zod": "^1.4.0",
+    "pg": "^8.11.3",
+    "pg-hstore": "^2.3.4",
     "pino-pretty": "^10.3.1",
     "rimraf": "^5.0.5",
     "sequelize": "^6.37.1",
